# finance-tracker-pro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  database.py  main.py  security.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  login.html  register.html  reports.html
docs/: architecture.md
scripts/: seed_demo.py
tests/: test_app.py
