[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker-pro"
version = "1.0.0"
description = "A privacy-first personal finance dashboard built with FastAPI and SQLite."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "jinja2==3.1.6",
  "python-multipart==0.0.20",
  "itsdangerous==2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"] # FastAPI uses Form(...) dependency defaults by design.
